--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans+JP);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans+JP);@import url(https://fonts.googleapis.com/icon?family=Material+Icons);@charset "UTF-8";
 
 .materialize-red {
   background-color: #e51c23 !important;
