--- a/resources/assets/sass/components/_variables.scss
+++ b/resources/assets/sass/components/_variables.scss
@@ -34,7 +34,7 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color: color("materialize-red", "lighten-2") !default;
+$primary-color: color("teal", "base") !default;
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
@@ -306,11 +306,11 @@ $toast-action-color: #eeff41;
 $font-stack: 'Noto Sans JP', sans-serif !default;
 $off-black: rgba(0, 0, 0, 0.87) !default;
 // Header Styles
-$h1-fontsize: 2.5rem !default;
-$h2-fontsize: 2.2rem !default;
-$h3-fontsize: 1.9rem !default;
-$h4-fontsize: 1.6rem !default;
-$h5-fontsize: 1.3rem !default;
+$h1-fontsize: 2.2rem !default;
+$h2-fontsize: 1.9rem !default;
+$h3-fontsize: 1.6rem !default;
+$h4-fontsize: 1.3rem !default;
+$h5-fontsize: 1rem !default;
 $h6-fontsize: 1rem !default;
 
 
